<resources>
    <string name="app_name">บริการรถตู้ บริษัทหนุมานทัวร์สยาม จำกัด</string>
    <string name="title_round">เที่ยวรถ</string>
    <string name="title_history">ประวัติการจอง</string>
    <string name="title_promotion">โปรโมชัน</string>
    <string name="title_profile">ข้อมูลส่วนตัว</string>
    <string name="title_reserv">ข้อมูลการชำระเงิน</string>
    <!--ข้อคามหน้าล็อกอิน-->
    <string name="txt_phone">เบอร์โทรศัพท์</string>
    <string name="txt_password">รหัสผ่าน</string>
    <!--ข้อความหน้าลงทะเบียน-->
    <string name="txt_reg_phone">เบอร์โทรศัพท์</string>
    <string name="txt_reg_first_name">ชื่อ</string>
    <string name="txt_reg_last_name">นามสกุล</string>
    <string name="txt_reg_email">อีเมล</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reserv">ReservActivity</string>
    <string name="title_activity_confirm_payment">ConfirmPayment</string>
</resources>
