<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/tool"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:src="@drawable/p_6"
                android:scaleType="centerCrop" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"></android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradiant">


            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rleftbutton"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/logo"
                android:layout_centerInParent="true"
                android:layout_marginTop="70dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/txt_reg_phone"
                    android:inputType="phone"
                    android:letterSpacing="0.1"
                    android:textColorHint="#aeb0a5"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="5dp"
                    android:background="#c1c1c1"

                    ></LinearLayout>

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/txt_reg_first_name"
                    android:inputType="textPersonName"
                    android:letterSpacing="0.1"
                    android:textColorHint="#aeb0a5"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="5dp"
                    android:background="#c1c1c1"></LinearLayout>

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/txt_reg_last_name"
                    android:inputType="textPersonName"
                    android:letterSpacing="0.1"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="5dp"
                    android:background="#c1c1c1"></LinearLayout>

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/txt_reg_email"
                    android:inputType="textEmailAddress"
                    android:letterSpacing="0.1"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="10dp"
                    android:background="#c1c1c1"></LinearLayout>

                <ImageView
                    android:id="@+id/img_sign_in"
                    android:layout_width="170dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="22dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/register1" />

            </LinearLayout>


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
